--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,6 +46,7 @@
 :root {
   --main: #83c55a;
   --main-green: #f7fff2;
+  --main-green-2: #e4ffd4;
   --main-gray: #ebebeb;
   --gray-footer: #787878;
   --radius: 0.625rem;
@@ -121,7 +122,9 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    body {
+      @apply bg-background text-foreground;
+    }
   }
 }
 
